--- a/src/main/resources/lang/ja_jp.yml
+++ b/src/main/resources/lang/ja_jp.yml
@@ -29,3 +29,5 @@ command:
 chat:
   scan:
     status: "経過時間: %s, ステータス: %s,　完了: %schunks, 残り: %schunks"
+sign:
+  replaceText: "このSignPictureを設置する権限はありません！"
