--- a/src/main/resources/lang/en_us.yml
+++ b/src/main/resources/lang/en_us.yml
@@ -4,24 +4,24 @@ command:
   scan:
     notscanned: "Scanning is not currently running!"
     start:
-      start: "[SignPictureManager] Scan of %s has started."
+      start: "[SignPictureManager] Started scanning %s."
       speed: "The scan runs at the speed of %s chunk in 1 second."
       helps:
         - "/signpic scan pause  Pause scanning."
         - "/signpic scan cancel  Cancel scanning."
         - "/signpic scan status Get scan status."
     pause:
-      pause: "[SignPictureManager] Scan of %s was paused."
+      pause: "[SignPictureManager] Scan was paused."
       already: "Scanning has already paused!"
       helps:
         - "/signpic scan resume  Resume scanning."
     resume:
-      resume: "[SignPictureManager] Scanning of %s was resumed."
+      resume: "[SignPictureManager] Scanning was resumed."
       already: "Scanning is not paused!"
       helps:
         - "/signpic scan cancel  Cancel scanning."
     cancel:
-      cancel: "[SignPictureManager] Scan of %s canceled."
+      cancel: "[SignPictureManager] Scan canceled."
     speed:
       speed: "[SignPictureManager] Scan speed changed to %s."
       invalid: "Invalid number."
